fix #239 - require JDK 8 and JDK 11 tests